# cartha-validator

./: .gitignore  .ruff.toml  CONTRIBUTING.md  Makefile  README.md  mypy.ini  pyproject.toml
.github/scripts/: check_version_bump.py  check_weights_version.py
.github/workflows/: test-validator.yml  version-check.yml
abis/: vault.json
cartha_validator/: __init__.py  config.py  epoch.py  epoch_runner.py  indexer.py  leaderboard_client.py  logging.py  main.py  pool_weights.py  processor.py  register.py  scoring.py  weights.py
docs/: ARCHITECTURE.md  COMMANDS.md  FEEDBACK.md  TESTNET_SETUP.md  VERSION_CONTROL.md
scripts/: bump_version.py  ecosystem.config.example.js  ecosystem.config.js  get_version.py  pm2_manager.py  run.sh  test_update.sh  update.sh  update_config.yaml  validate_env.py  validator_manager.py
tests/: conftest.py  test_auto_update.py  test_deregistered_hotkeys.py  test_epoch_runner_deregistered.py  test_main.py  test_parent_pool_weights.py  test_replay.py  test_restart.py  test_scoring.py  test_version_check.py  test_weekly_epoch.py
