[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "cartha-subnet-validator"
version = "0.1.0"
description = "Cartha subnet validator workspace."
requires-python = ">=3.11,<3.12"
authors = [
  { name = "Cartha Contributors" }
]
readme = "README.md"
dependencies = []

[tool.uv]
dev-dependencies = [
  "pytest>=8.2",
  "pytest-asyncio>=0.23",
  "ruff>=0.4",
  "mypy>=1.9",
  "httpx>=0.25",
]

[tool.uv.workspace]
members = [
  "packages/validator",
  "packages/subnet",
]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["packages"]
